--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "electron": "^16.0.7"
+    "electron": "^26.0.0",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
