Make the autopublisher generate release notes

--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
               "owner": "Bimbalacom",
               "name": "Desktop"
             },
-            "draft": true
+            "draft": true,
+            "generateReleaseNotes": true
           }
         }
       ]
